--- a/stress line.ipynb
+++ b/stress line.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# surface and stress line\n",
     "\n",
@@ -10,37 +13,106 @@
     "\n",
     "We have two equations describing the soil and root limitation to water flow.\n",
     "\n",
-    "The Gardner equation writes\n",
+    "The Gardner equation writes:\n",
     "\n",
-    "\\begin{eqnarray} \\label{eq:gardner}\n",
-    "E=\\kappa \\left( 1/h_root^2-1/h_bulk^2 \\right)\n",
+    "\\begin{eqnarray} \n",
+    "E= \\kappa \\left( \\frac{1}{\\psi_b^2} - \\frac{1}{\\psi_{sri}^2} \\right),\n",
     "\\end{eqnarray}\n",
     "\n",
-    "\\begin{eqnarray}\n",
-    "\\label{eqn:3}\n",
-    "\\frac{\\partial \\left[\\left(\\theta+b\\right)c\\right]}{\\partial t}-\\nabla\\cdot\\left(D_{eff}\\nabla c\\right)+\\nabla\\cdot\\left(c\\boldsymbol{u}\\right)= q_{c\\ root-soil}\\\\\n",
-    "q_{c\\ root-soil} = \\frac{1}{V_s}\\sum_{i=1}^{n} \\left[- 2 \\pi r_i l_i \\frac{V_m c}{K_m + c}\\right]\\\\\n",
-    "c=c_0 \\text{   at   } t=0\\\\\n",
-    "D_{eff}\\nabla c+ c\\boldsymbol{u}=0 \\text{   at the top and bottom boundaries} \\\\\n",
-    "c = c_0 \\text{   at the sides} \n",
+    "where $\\psi_b$ is the bulk soil water potential, $\\psi_{sri}$ is the soil root interface water potential and $\\kappa$ a factor coming from the solution of the Gardner equation with a given coductivity function. It is defined as:\n",
+    "\n",
+    "\\begin{eqnarray} \n",
+    "\\kappa=2 \\frac{\\pi B L K_0 }{1-\\tau} \\left(  \\frac{1}{h_0}   \\right)^{-\\tau}\n",
     "\\end{eqnarray}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from sympy import *\n",
     "\n",
-    "E=Symbol('E')\n",
+    "Egardner=Symbol('EG')\n",
+    "Ecouvreur=Symbol('EC')\n",
     "PsiL = Symbol('PsiL')\n",
     "PsiB=Symbol('PsiB')\n",
+    "PsiSRI=Symbol('PsiSRI')\n",
     "Krs=Symbol('Krs')\n",
-    "kappa=Symbol('kappa')\n"
+    "kappa=Symbol('kappa')\n",
+    "\n",
+    "EG=kappa*(1/PsiB**2-1/PsiSRI**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks*psi0*Piecewise((log(Psi/psi0), Eq(-tau, -1)), ((Psi/psi0)**(-tau + 1)/(-tau + 1), True))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conduct=Symbol('conduct')\n",
+    "phi=Symbol('phi')\n",
+    "psi0=Symbol('psi0')\n",
+    "Ks=Symbol('Ks')\n",
+    "Psi=Symbol('Psi')\n",
+    "tau=Symbol('tau')\n",
+    "\n",
+    "conduct=Ks*(Psi/psi0)**(-tau)\n",
+    "integrate(conduct,Psi)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Couvreur equation writes\n",
+    "\n",
+    "\\begin{eqnarray} \n",
+    "E= K_{rs} \\left( \\psi_{sri} - \\psi_L \\right),\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "where $\\psi_L$ is the leaf water potential and $K_{rs}$ the root system conductivity. Typically Couvreur and Gardner can be combined and would result in a 3D surface in the $\\psi_L / \\psi_B / E$ domain\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PsiL]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EC=Krs*(PsiSRI-PsiL)\n",
+    "\n",
+    "solve(EC,PsiSRI)"
    ]
   },
   {
@@ -50,6 +122,11 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
