--- a/stress line.ipynb
+++ b/stress line.ipynb
@@ -48,37 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Ks*psi0*Piecewise((log(Psi/psi0), Eq(-tau, -1)), ((Psi/psi0)**(-tau + 1)/(-tau + 1), True))"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "conduct=Symbol('conduct')\n",
-    "phi=Symbol('phi')\n",
-    "psi0=Symbol('psi0')\n",
-    "Ks=Symbol('Ks')\n",
-    "Psi=Symbol('Psi')\n",
-    "tau=Symbol('tau')\n",
-    "\n",
-    "conduct=Ks*(Psi/psi0)**(-tau)\n",
-    "integrate(conduct,Psi)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,7 +122,30 @@
    "metadata": {},
    "source": [
     "The first solution is $\\psi_L=\\psi_B$ when $E=0$.\n",
-    "The second solution"
+    "The second solution leads to a negative value only if $\\sqrt(-4*Krs*PsiL**3*kappa + kappa**2)<kappa$, which is impossible\n",
+    "The third solution gives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Eq(PsiB, (-kappa - sqrt(-4*Krs*PsiL**3*kappa + kappa**2))/(2*Krs*PsiL**2))"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Eq(PsiB,-(kappa + sqrt(-4*Krs*PsiL**3*kappa + kappa**2))/(2*Krs*PsiL**2))\n"
    ]
   },
   {
@@ -167,12 +159,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ks*psi0*Piecewise((log(Psi/psi0), Eq(-tau, -1)), ((Psi/psi0)**(-tau + 1)/(-tau + 1), True))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conduct=Symbol('conduct')\n",
+    "phi=Symbol('phi')\n",
+    "psi0=Symbol('psi0')\n",
+    "Ks=Symbol('Ks')\n",
+    "Psi=Symbol('Psi')\n",
+    "tau=Symbol('tau')\n",
+    "\n",
+    "conduct=Ks*(Psi/psi0)**(-tau)\n",
+    "integrate(conduct,Psi)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
